gradient overlay and background image added

--- a/component-site/src/components/Hero.css
+++ b/component-site/src/components/Hero.css
@@ -10,6 +10,9 @@
   height: 100vh;
 }
 
+
+/* ============================Top content========================== */
+
 /* navbar */
 
 nav {
@@ -121,6 +124,22 @@ nav {
 
 /* Main content */
 
+.main .bg-img{
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+}
+
+.gradient-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background:linear-gradient(0deg,rgb(0, 0, 0), rgb(2, 2, 2,0.8));
+  z-index: 1;
+}
 
 .main-content {
   display: flex;
@@ -135,6 +154,7 @@ nav {
 }
 
 .main-content p{
+  z-index: 3;
   color: #fff;
 }
 
@@ -155,8 +175,10 @@ nav {
   border: 4px solid #bd35b6;
   color:#bd35b6;
   font-weight: bold;
+  z-index: 4;
 }
 .glowing-btn {
+  z-index: 3;
   position: relative;
   color: var(--glow-color);
   cursor: pointer;
@@ -366,11 +388,12 @@ nav {
               'item1 item1 item4 item5'
               'item6 item7 item8 item8';
   gap: 1rem;            
-  
+  z-index: 4;
 }
 
 
 .item1{
+  z-index: 4;
   overflow: hidden;
   border-radius: 1rem;
 }
@@ -386,6 +409,7 @@ nav {
 }
 
 .item2{
+  z-index: 4;
   overflow: hidden;
   border-radius: 1rem;
 }
@@ -401,10 +425,12 @@ nav {
 }
 
 .item3{
+  z-index: 4;
   overflow: hidden;
   border-radius: 1rem;
 }
 .item3 img{
+  z-index: 4;
   width: 200px;
   height: 200px;
   object-fit: cover;
@@ -415,6 +441,7 @@ nav {
   transform: scale(1.2);
 }
 .item4{
+  z-index: 4;
   overflow: hidden;
   border-radius: 1rem;
 }
@@ -430,6 +457,7 @@ nav {
 }
 
 .item5{
+  z-index: 4;
   overflow: hidden;
   border-radius: 1rem;
 }
@@ -445,6 +473,7 @@ nav {
 }
 
 .item6{
+  z-index: 4;
   overflow: hidden;
   border-radius: 1rem;
 }
@@ -460,6 +489,7 @@ nav {
 }
 
 .item7{
+  z-index: 4;
   overflow: hidden;
   border-radius: 1rem;
 }
@@ -477,6 +507,7 @@ nav {
 
 
 .item8{
+  z-index: 4;
   overflow: hidden;
   border-radius: 1rem;
 }
@@ -492,3 +523,4 @@ nav {
   transform: scale(1.2);
 }
 
+/* ==================Middle content=================== */
