--- a/component-site/src/components/ReactBits/BlurText.css
+++ b/component-site/src/components/ReactBits/BlurText.css
@@ -2,3 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Cookie&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nova+Flat&display=swap');
 
+.blur-text{
+
+}
+
+@media(max-width:56em){
+    .blur-text{
+        font-size: 20px;
+    }
+}
