--- a/component-site/src/components/Hero.css
+++ b/component-site/src/components/Hero.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
   --glow-color: hsl(186 100% 69%);
@@ -166,12 +167,19 @@ nav {
   display: flex;
   gap: 10px;
   margin-top: 40px;
+  width: 100%;
+  max-width: 600px;
+  justify-content: center;
+  flex-wrap: nowrap;
+  padding: 0 15px;
+  box-sizing: border-box;
 }
 
 .input input{
   border: none;
   border-radius: 0.8rem;
-  width: 21rem;
+  width: 100%;
+  max-width: 21rem;
   height: 3rem;
   outline: none;
   padding-left: 15px;
@@ -180,6 +188,7 @@ nav {
   color:#bd35b6;
   font-weight: bold;
   z-index: 4;
+  box-sizing: border-box;
 }
 .glowing-btn {
   z-index: 3;
@@ -194,7 +203,16 @@ nav {
   font-family: "Raleway", sans-serif;
   font-size: 1em;
   font-weight: 800;
-  letter-spacing: 1.5em;
+  letter-spacing: 0.4em;
+  width: auto;
+  min-width: 120px;
+  height: 3rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   -webkit-box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
     0px 0px 0.5em 0px var(--glow-color);
@@ -207,8 +225,8 @@ nav {
 
 .glowing-txt {
   float: left;
-  margin-left:0.8em ;
-  margin-right: -0.9em;
+  margin-left: 0.3em;
+  margin-right: -0.3em;
   -webkit-text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
     0 0 0.45em var(--glow-color);
   -moz-text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
@@ -375,7 +393,48 @@ nav {
 
 @media only screen and (max-width: 600px) {
   .glowing-btn{
-    font-size: 1em;
+    font-size: 0.8em;
+    letter-spacing: 0.15em;
+    padding: 0.04em 0.05em;
+    min-width: 100px;
+  }
+  
+  .input {
+    flex-direction: row;
+    align-items: center;
+    width: 90%;
+  }
+  
+  .input input {
+    max-width: 100%;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .glowing-btn{
+    font-size: 0.7em;
+    letter-spacing: 0.1em;
+    padding: 0.04em 0.05em;
+    min-width: 90px;
+    height: 2.5rem;
+  }
+  
+  .input input {
+    height: 2.5rem;
+    font-size: 0.9rem;
+  }
+  
+  .input {
+    gap: 5px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .glowing-btn{
+    font-size: 1.2em;
+    letter-spacing: 0.8em;
+    padding: 0.04em 0.15em;
+    min-width: 150px;
   }
 }
 
@@ -545,6 +604,16 @@ nav {
       'item8 item8'
       'item6 item7';
   }
+  
+  .input {
+    flex-direction: row;
+    align-items: center;
+    width: 90%;
+  }
+  
+  .input input {
+    max-width: 100%;
+  }
 }
 
 /* ==================Middle content=================== */
@@ -555,7 +624,7 @@ nav {
   position: relative;
   background-color: #e174fa;
   display: flex;
-  
+  justify-content: center;
 }
 
 .gradient-overlay1 {
@@ -565,3 +634,15 @@ nav {
   background:linear-gradient(0deg, rgb(2, 2, 2,0.8),rgb(0, 0, 0));
   z-index: 1;
 }
+
+.middle-content h1{
+  color: #fff;
+  text-align: center;
+  font-size: 4rem;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
+  margin-top: 1rem;
+}
+
+/* ====cards in middle sectionn==== */
+
